# aml_bt_dut_control

./: CMakeLists.txt  README.md
include/dut_controller/: DutController.h  IDutController.h  ITransport.h  Operation.h  Status.h  TransportConfig.h  TransportFactory.h  TransportTypes.h
include/dut_controller/transports/: AdbTransport.h  UartTransport.h  UsbTransport.h
src/: DutController.cpp  TransportFactory.cpp  main.cpp
src/transports/: AdbTransport.cpp  UartTransport.cpp  UsbTransport.cpp
